--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
 <title>Social Media Buddy</title>
 <style>
 body {margin:0;font-family:Arial;background:#fff;}
-#sidebar {position:fixed;left:0;top:0;width:200px;height:100%;background:#fffc00;color:#333;display:flex;flex-direction:column;z-index:2;transition:0.3s;}
+#sidebar {position:fixed;left:0;top:0;width:200px;height:100%;background:#FFFC00;color:#333;display:flex;flex-direction:column;z-index:2;transition:0.3s;box-shadow:2px 0 5px rgba(0,0,0,0.1);}
 #sidebar.hide{left:-200px;}
-#sidebar h2{text-align:center;padding:10px;}
-#sidebar button{background:none;border:none;color:#333;text-align:left;padding:10px;cursor:pointer;font-size:16px;}
-#sidebar button:hover{background:#f0e500;}
+#sidebar h2{text-align:center;padding:10px;margin:0;font-size:18px;}
+#sidebar button{background:none;border:none;color:#333;text-align:left;padding:10px;cursor:pointer;font-size:16px;font-weight:bold;}
+#sidebar button:hover{background:#FFEB3B;}
+#sidebar-footer {margin-top:auto;padding:10px;text-align:center;font-size:12px;color:#333;border-top:1px solid #ddd;}
 #content{margin-left:200px;padding:20px;transition:0.3s;}
 #sidebar.hide + #content{margin-left:0;}
-#hamburger{position:fixed;top:10px;left:10px;font-size:26px;color:#00a000;cursor:pointer;z-index:3;}
-h1{text-align:center;}
+#hamburger{position:fixed;top:10px;left:10px;font-size:26px;color:green;cursor:pointer;z-index:3;}
+h1{text-align:center;margin-top:0;}
 label{font-weight:bold;display:block;margin-top:10px;}
-input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
-.language-buttons{display:flex;flex-wrap:wrap;}
+input,textarea,button,select{width:100%;padding:8px;margin-top:5px;font-size:16px;border-radius:4px;border:1px solid #ccc;}
+.language-buttons{display:flex;flex-wrap:wrap;margin-bottom:10px;}
 .lang-btn{border:1px solid #ccc;border-radius:5px;padding:6px 12px;margin:3px;cursor:pointer;}
 .lang-btn.selected{background:#007bff;color:white;border-color:#007bff;}
 .generator{display:none;}
@@ -24,9 +25,9 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
 .copy-btn:hover{background:#0056b3;}
 #disclaimer{background:#ffcc00;color:#333;padding:10px;text-align:center;position:fixed;top:0;left:0;width:100%;font-weight:bold;z-index:9999;}
 #disclaimer button{margin-left:10px;padding:4px 10px;cursor:pointer;}
-.social-card{text-align:center;margin:auto;margin-top:30px;max-width:400px;background:#f5f5f5;padding:20px;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,0.1);}
+.social-card{text-align:center;margin:auto;margin-top:15px;max-width:180px;background:#f5f5f5;padding:10px;border-radius:10px;box-shadow:0 0 5px rgba(0,0,0,0.1);}
 .social-card img{width:100px;height:100px;border-radius:50%;}
-.social-icons{display:flex;justify-content:center;gap:15px;margin-top:10px;}
+.social-icons{display:flex;justify-content:center;gap:10px;margin-top:10px;}
 .social-icons a{text-decoration:none;font-size:22px;color:#333;}
 .social-icons a:hover{color:#007bff;}
 .trending-container{margin-top:20px;background:#f7f7f7;padding:10px;border-radius:8px;box-shadow:0 0 5px rgba(0,0,0,0.1);}
@@ -39,7 +40,8 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
 .trending-post h4{margin:0;font-size:16px;color:#333;}
 .trending-post p{margin:4px 0;font-size:14px;}
 .trending-platform{font-size:12px;color:#555;}
-.generated-item{margin-top:10px;padding:5px;border-bottom:1px dashed #ccc;}
+.generated-item{margin-bottom:8px;}
+#profile-output{display:flex;flex-wrap:wrap;gap:10px;margin-top:10px;}
 </style>
 </head>
 <body>
@@ -64,6 +66,7 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
   <button onclick="showSection('translate')">Language Translator</button>
   <button onclick="showSection('profile')">Profile Search</button>
   <button onclick="showSection('card')">Social Card</button>
+  <div id="sidebar-footer">Developed by Praju</div>
 </div>
 
 <!-- Main Content -->
@@ -79,7 +82,7 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
   <p><b>Engagement Rate:</b> <span id="engagement">0%</span></p>
   <p><b>Posts This Week:</b> <span id="posts">0</span></p>
 
-  <!-- What's Trending Section -->
+  <!-- What's Trending -->
   <div class="trending-container">
     <div class="trending-header">
       <h3>🔥 What's Trending</h3>
@@ -93,14 +96,14 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
 <div id="caption" class="generator">
   <h1>Caption Generator</h1>
   <input id="caption-topic" placeholder="Enter topic like Food, Travel...">
-  <label>Number of Captions:</label>
-  <input type="number" id="caption-count" value="3" min="1" max="10">
-  <label>Select Languages:</label>
+  <label>Languages:</label>
   <div class="language-buttons" id="caption-langs">
     <div class="lang-btn selected" data-lang="English">English</div>
     <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
     <div class="lang-btn selected" data-lang="Kannada">Kannada</div>
   </div>
+  <label>Number of captions:</label>
+  <input id="caption-count" type="number" min="1" max="10" value="3">
   <button onclick="generateCaption()">Generate Captions</button>
   <div id="caption-output"></div>
 </div>
@@ -109,9 +112,8 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
 <div id="meme" class="generator">
   <h1>Meme Generator</h1>
   <input id="meme-topic" placeholder="Enter meme idea...">
-  <label>Number of Memes:</label>
-  <input type="number" id="meme-count" value="3" min="1" max="10">
-  <label>Select Languages:</label>
+  <label>Number of memes:</label>
+  <input id="meme-count" type="number" min="1" max="10" value="3">
   <div class="language-buttons" id="meme-langs">
     <div class="lang-btn selected" data-lang="English">English</div>
     <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
@@ -125,9 +127,8 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
 <div id="bio" class="generator">
   <h1>Bio Generator</h1>
   <textarea id="bio-input" placeholder="Enter your profession or vibe..."></textarea>
-  <label>Number of Bios:</label>
-  <input type="number" id="bio-count" value="3" min="1" max="10">
-  <label>Select Languages:</label>
+  <label>Number of bios:</label>
+  <input id="bio-count" type="number" min="1" max="10" value="3">
   <div class="language-buttons" id="bio-langs">
     <div class="lang-btn selected" data-lang="English">English</div>
     <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
@@ -137,13 +138,13 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
   <div id="bio-output"></div>
 </div>
 
-<!-- Post Content Generator -->
+<!-- Post Generator -->
 <div id="post" class="generator">
   <h1>Post Content Generator</h1>
   <textarea id="post-desc" placeholder="Describe your post idea..."></textarea>
-  <label>Number of Posts:</label>
-  <input type="number" id="post-count" value="3" min="1" max="10">
-  <label>Select Languages:</label>
+  <label>Number of posts:</label>
+  <input id="post-count" type="number" min="1" max="10" value="3">
+  <label>Languages:</label>
   <div class="language-buttons" id="post-langs">
     <div class="lang-btn selected" data-lang="English">English</div>
     <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
@@ -165,7 +166,6 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
 <div id="translate" class="generator">
   <h1>Language Translator</h1>
   <textarea id="translate-text" placeholder="Enter text to translate..."></textarea>
-  <label>Select Languages:</label>
   <div class="language-buttons" id="translate-langs">
     <div class="lang-btn selected" data-lang="English">English</div>
     <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
@@ -181,12 +181,6 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
   <input id="profile-name" placeholder="Enter username...">
   <button onclick="searchProfile()">Search Profiles</button>
   <div id="profile-output"></div>
-
-  <h3>Add New Social Media Account</h3>
-  <input id="new-account-name" placeholder="Account Name (e.g. Instagram)">
-  <input id="new-account-url" placeholder="URL (e.g. https://instagram.com/user)">
-  <button onclick="addSocialAccount()">Add Account</button>
-  <div id="added-accounts"></div>
 </div>
 
 <!-- Social Card -->
@@ -196,7 +190,7 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
     <img src="https://via.placeholder.com/100" alt="Profile">
     <h3 id="card-name">Guest User</h3>
     <p>Follow me on:</p>
-    <div class="social-icons" id="card-icons">
+    <div class="social-icons">
       <a href="https://instagram.com/" target="_blank">📸</a>
       <a href="https://twitter.com/" target="_blank">🐦</a>
       <a href="https://linkedin.com/" target="_blank">💼</a>
@@ -205,15 +199,14 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
   </div>
 </div>
 
-<script>
-// Sidebar toggle
-document.getElementById('hamburger').onclick=()=>document.getElementById('sidebar').classList.toggle('hide');
-document.getElementById('disclaimer-btn').onclick=()=>document.getElementById('disclaimer').style.display='none';
+</div>
 
-// Language button toggle
-document.querySelectorAll('.language-buttons .lang-btn').forEach(btn=>{
-  btn.onclick=()=>btn.classList.toggle('selected');
-});
+<script>
+// Hamburger toggle
+document.getElementById('hamburger').onclick=()=>document.getElementById('sidebar').classList.toggle('hide');
+
+// Disclaimer
+document.getElementById('disclaimer-btn').onclick=()=>document.getElementById('disclaimer').style.display='none';
 
 // Guest Login
 function initGuest(){
@@ -224,6 +217,7 @@ function initGuest(){
   document.getElementById('logout-btn').style.display='inline-block';
 }
 initGuest();
+
 function logout(){sessionStorage.removeItem('guestName');location.reload();}
 
 // Show Section
@@ -233,7 +227,12 @@ function showSection(id){
 }
 showSection('dashboard');
 
-// Copy Button
+// Helper: toggle language button
+document.querySelectorAll('.language-buttons .lang-btn').forEach(btn=>{
+  btn.onclick=()=>btn.classList.toggle('selected');
+});
+
+// Copy function
 function copyText(btn){
   const text=btn.parentElement.querySelector('p').textContent.trim();
   navigator.clipboard.writeText(text);
@@ -242,16 +241,14 @@ function copyText(btn){
 }
 
 // Caption Generator
-const topicEmojis={Food:'🍴 #Foodie #Yummy',Travel:'✈️ #Wanderlust #Adventure',Fitness:'💪 #Fitness #Workout',Fashion:'👗 #Style #OOTD',Default:'🔥 #Trending #Vibes'};
 function generateCaption(){
-  const topic=document.getElementById('caption-topic').value.trim()||'Food';
+  const topic=document.getElementById('caption-topic').value||'Food';
   const count=parseInt(document.getElementById('caption-count').value)||3;
   const langs=Array.from(document.querySelectorAll('#caption-langs .lang-btn.selected')).map(b=>b.dataset.lang);
-  let emoji=topicEmojis[topic]||topicEmojis['Default'];
   let output='';
   langs.forEach(lang=>{
-    for(let i=1;i<=count;i++){
-      output+=`<div class="generated-item"><p>${lang}: ${topic} vibes #${i} ${emoji}</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
+    for(let i=0;i<count;i++){
+      output+=`<div class="generated-item"><p>${lang} Caption #${i+1}: Delicious vibes on ${topic} 🍴</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
     }
   });
   document.getElementById('caption-output').innerHTML=output;
@@ -259,60 +256,44 @@ function generateCaption(){
 
 // Meme Generator
 function generateMeme(){
-  const topic=document.getElementById('meme-topic').value.trim() || 'Weekend vibes';
-  const count = parseInt(document.getElementById('meme-count').value) || 3;
-  const langs = Array.from(document.querySelectorAll('#meme-langs .lang-btn.selected')).map(b=>b.dataset.lang);
-  const sampleMemes = [
-    `When you realize weekend is over 😭`,
-    `That feeling when coffee is finished ☕`,
-    `Monday morning struggle 😅`,
-    `When code finally works 🎉`,
-    `Unexpected bug in production 🤯`
-  ];
+  const topic=document.getElementById('meme-topic').value||'Weekend';
+  const count=parseInt(document.getElementById('meme-count').value)||3;
+  const langs=Array.from(document.querySelectorAll('#meme-langs .lang-btn.selected')).map(b=>b.dataset.lang);
   let output='';
   langs.forEach(lang=>{
     for(let i=0;i<count;i++){
-      const meme = sampleMemes[Math.floor(Math.random()*sampleMemes.length)];
-      output += `<div class="generated-item"><p>${lang} Meme #${i+1}: ${meme}</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
+      output+=`<div class="generated-item"><p>${lang} Meme #${i+1}: When you realize ${topic} is over 😭</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
     }
   });
-  document.getElementById('meme-output').innerHTML = output;
+  document.getElementById('meme-output').innerHTML=output;
 }
 
 // Bio Generator
 function generateBio(){
-  const input = document.getElementById('bio-input').value || 'Software Tester';
-  const count = parseInt(document.getElementById('bio-count').value) || 3;
-  const langs = Array.from(document.querySelectorAll('#bio-langs .lang-btn.selected')).map(b=>b.dataset.lang);
-  const sampleBios = [
-    `${input} | Coffee Lover ☕`,
-    `${input} | AI Enthusiast 🤖`,
-    `${input} | Traveler ✈️`,
-    `${input} | Gamer 🎮`,
-    `${input} | Music Lover 🎵`
-  ];
-  let output = '';
+  const input=document.getElementById('bio-input').value||'Software Tester';
+  const count=parseInt(document.getElementById('bio-count').value)||3;
+  const langs=Array.from(document.querySelectorAll('#bio-langs .lang-btn.selected')).map(b=>b.dataset.lang);
+  let output='';
   langs.forEach(lang=>{
     for(let i=0;i<count;i++){
-      const bio = sampleBios[Math.floor(Math.random()*sampleBios.length)];
-      output += `<div class="generated-item"><p>${lang} Bio #${i+1}: ${bio}</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
+      output+=`<div class="generated-item"><p>${lang} Bio #${i+1}: ${input} | Coffee Lover ☕</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
     }
   });
-  document.getElementById('bio-output').innerHTML = output;
+  document.getElementById('bio-output').innerHTML=output;
 }
 
 // Post Generator
 function generatePost(){
-  const desc = document.getElementById('post-desc').value || 'Sharing thoughts';
-  const count = parseInt(document.getElementById('post-count').value) || 3;
-  const langs = Array.from(document.querySelectorAll('#post-langs .lang-btn.selected')).map(b=>b.dataset.lang);
+  const desc=document.getElementById('post-desc').value||'Sharing thoughts';
+  const count=parseInt(document.getElementById('post-count').value)||3;
+  const langs=Array.from(document.querySelectorAll('#post-langs .lang-btn.selected')).map(b=>b.dataset.lang);
   let output='';
   langs.forEach(lang=>{
     for(let i=0;i<count;i++){
-      output += `<div class="generated-item"><p>${lang} Post #${i+1}: ${desc}</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
+      output+=`<div class="generated-item"><p>${lang} Post #${i+1}: ${desc}</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
     }
   });
-  document.getElementById('post-output').innerHTML = output;
+  document.getElementById('post-output').innerHTML=output;
 }
 
 // Video Downloader
@@ -324,43 +305,32 @@ function generateVideo(){
 // Translate
 function generateTranslate(){
   const text=document.getElementById('translate-text').value;
-  const langs = Array.from(document.querySelectorAll('#translate-langs .lang-btn.selected')).map(b=>b.dataset.lang);
+  const langs=Array.from(document.querySelectorAll('#translate-langs .lang-btn.selected')).map(b=>b.dataset.lang);
   let output='';
   langs.forEach(lang=>{
-    output += `<div class="generated-item"><p>Translated to ${lang}: "${text}" (demo)</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
+    output+=`<div class="generated-item"><p>Translated to ${lang}: "${text}" (demo)</p><div class='copy-btn' onclick='copyText(this)'>Copy</div></div>`;
   });
-  document.getElementById('translate-output').innerHTML = output;
+  document.getElementById('translate-output').innerHTML=output;
 }
 
 // Profile Search
 function searchProfile(){
-  const name=document.getElementById('profile-name').value;
-  const accounts = ['Instagram','Twitter','LinkedIn','YouTube'];
-  let output='';
-  accounts.forEach(acc=>{
-    output+=`<p>${acc}: <a href='https://${acc.toLowerCase()}.com/${name}' target='_blank'>@${name}</a></p>`;
-  });
+  const name=document.getElementById('profile-name').value.trim();
+  if(!name) return alert("Enter a username");
+  const platforms = [
+    {name:'Instagram', url:`https://instagram.com/${name}`, icon:'📸'},
+    {name:'Twitter', url:`https://twitter.com/${name}`, icon:'🐦'},
+    {name:'LinkedIn', url:`https://linkedin.com/in/${name}`, icon:'💼'},
+    {name:'YouTube', url:`https://youtube.com/@${name}`, icon:'▶️'}
+  ];
+  const output = platforms.map(p=>`
+    <div class="social-card">
+      <h4>${p.icon} ${p.name}</h4>
+      <p>@${name}</p>
+      <a href="${p.url}" target="_blank">Visit</a>
+    </div>
+  `).join('');
   document.getElementById('profile-output').innerHTML=output;
-}
-
-// Add New Social Account
-function addSocialAccount(){
-  const name=document.getElementById('new-account-name').value.trim();
-  const url=document.getElementById('new-account-url').value.trim();
-  if(!name || !url) return alert('Enter both name and URL');
-  const div=document.createElement('div');
-  div.innerHTML=`<p>${name}: <a href="${url}" target="_blank">${url}</a></p>`;
-  document.getElementById('added-accounts').appendChild(div);
-  document.getElementById('new-account-name').value='';
-  document.getElementById('new-account-url').value='';
-}
-
-// Copy Function
-function copyText(btn){
-  const text=btn.parentElement.querySelector('p').textContent.trim();
-  navigator.clipboard.writeText(text);
-  btn.textContent="Copied!";
-  setTimeout(()=>btn.textContent="Copy",2000);
 }
 
 // Dashboard Analytics
@@ -399,6 +369,7 @@ function loadTrending(){
     </div>`).join('');
 }
 loadTrending();
+
 </script>
 </body>
 </html>
